discussion/kv_engine/168232/168232_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50110: wip

Change-Id: Ia125b36db35ec97f315121e3328c7eeca623b45e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-01-05 11:42:19.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-05 11:52:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36099/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: use of undeclared identifier "wasAboveBackfillThreshold"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36099/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14642/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13: error: use of undeclared identifier "wasAboveBackfillThreshold" [clang-diagnostic-error]
        if (wasAboveBackfillThreshold &&
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14642/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: use of undeclared identifier "wasAboveBackfillThreshold" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14642/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42589/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_remover.cc(207): error C2065: "wasAboveBackfillThreshold": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42589/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17366/ : FAILURE

Compile error at [2022-01-05T11:45:31.617Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: use of undeclared identifier "wasAboveBackfillThreshold"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17366/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4284/ : FAILURE

Compile error at [2022-01-05T11:44:20.780Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: use of undeclared identifier "wasAboveBackfillThreshold"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4284/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16289/ : FAILURE

Compile error at [2022-01-05T11:44:25.889Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: ?wasAboveBackfillThreshold? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16582/ : FAILURE

Compile error at [2022-01-05T11:43:44.365Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: ?wasAboveBackfillThreshold? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16582/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15443/ : FAILURE

Compile error at [2022-01-05T11:45:38.227Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: use of undeclared identifier "wasAboveBackfillThreshold"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15443/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24703/ : FAILURE

Compile error at [2022-01-05T11:44:26.543Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: use of undeclared identifier "wasAboveBackfillThreshold"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24703/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4340/ : FAILURE

Compile error at [2022-01-05T11:48:51.082Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@4/kv_engine/engines/ep/src/checkpoint_remover.cc:207:13:
error: ?wasAboveBackfillThreshold? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4340/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13473/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
